--- a/src/components/LoginRegister.module.css
+++ b/src/components/LoginRegister.module.css
@@ -9,7 +9,7 @@
     color: aliceblue;
 }
 
-.wrapper .form-box {
+.wrapper .formBox {
     width: 100%;
     padding: 40px;
 }
@@ -19,14 +19,14 @@ form h1{
     text-align: center;
 }
 
-form .input-box {
+form .inputBox {
     position: relative;
     width: 100%;
     height: 50px;
     margin: 30px 0;
 }
 
-.input-box input {
+.inputBox input {
     width: 100%;
     height: 100%;
     background: transparent;
@@ -40,11 +40,11 @@ form .input-box {
 
 }
 
-.input-box input::placeholder {
+.inputBox input::placeholder {
     color: aliceblue;
 }
 
-.input-box .icon {
+.inputBox .icon {
     position: absolute;
     right: 20px;
     top: 50%;
@@ -52,19 +52,19 @@ form .input-box {
     font-size: 14px;
 }
 
-form .remember-forgot {
+form .rememberForgot {
     display: flex;
     justify-content: space-between;
     font-size: 12.5px;
     margin: -15px 0 15px;
 }
 
-.remember-forgot label input{
+.rememberForgot label input{
     accent-color: white;
     margin-right: 4px;
 }
 
-.remember-forgot a{
+.rememberForgot a{
     color: white;
     text-decoration: none;
 }
@@ -73,7 +73,7 @@ form .remember-forgot {
     text-decoration: underline;
 }
 
-form .agree-terms {
+form .agreeTerms {
     display: flex;
     justify-content: space-between;
     font-size: 12.5px;
@@ -85,12 +85,12 @@ form .agree-terms {
     margin-right: 4px;
 }
 
-.agree-terms a{
+.agreeTerms a{
     color: white;
     text-decoration: none;
 }
 
-.agree-terms a:hover {
+.agreeTerms a:hover {
     text-decoration: underline;
 }
 
@@ -108,32 +108,37 @@ form button{
     font-weight: 700;
 }
 
-form .register-link {
+form .registerLink {
     font-size: 12.5px;
     text-align: center;
     margin: 20px 0 15px;
 }
-.register-link p a {
+.registerLink p a {
     color: aliceblue;
     text-decoration: none;
     font-weight: 600;
 }
 
-.register-link p a:hover {
+.registerLink p a:hover {
     text-decoration: underline;
 }
 
-form .login-link {
+form .loginLink {
     font-size: 12.5px;
     text-align: center;
     margin: 20px 0 15px;
 }
-.login-link p a {
+.loginLink p a {
     color: aliceblue;
     text-decoration: none;
     font-weight: 600;
 }
 
-.login-link p a:hover {
+.loginLink p a:hover {
     text-decoration: underline;
+}
+
+.errorMessage {
+    color: #701a1a;
+    margin-bottom: 1em;
 }
