--- a/src/components/AdminDashboard/AdminDashboard.module.css
+++ b/src/components/AdminDashboard/AdminDashboard.module.css
@@ -1,6 +1,6 @@
 .wrapper {
     position: relative;
-    width: 1200px;
+    width: 1300px;
     height: 800px;
     background: transparent;
     border: 2px solid #525252;
@@ -21,7 +21,7 @@
     display: flex;
     width: 100%;
     height: 100%;
-    max-width: 1200px;
+    max-width: 1300px;
     max-height: 800px;    
 }
 
@@ -39,9 +39,9 @@
 .usersContainer {
     display: flex;
     flex-direction: column;
-    width: 275px;
+    width: 350px;
     padding: 40px;
-    border-right: 2px solid #525252;    
+    border-right: 2px solid #525252;
 }
 
 .title {
@@ -72,22 +72,46 @@
     flex-grow: 1;
 }
 
-.listMenuItem {
+.listMenuUsers {
+    margin-top: 15px;
+    flex-direction: column;
+    flex-grow: 1;
+    background: #E1E3E6;    
+    border-radius: 5px;
+    border: 2px solid #595856;
+    overflow-y: auto;
+    max-height: 620px;
+}
+
+.listMenuItemProjects {
     display: flex;
     align-items: center;
     border-radius: 5px;
     width: 100%;
     margin-bottom: 5px;
-    padding: 5px;
-    color: #e1e3e6;
+    padding: 10px;
+    color: #E1E3E6;
+    cursor: pointer;
 }
 
-.listMenuItem:hover {
+.listMenuItemUsers {
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+    width: 100%;
+    margin-bottom: 5px;
+    padding: 10px;
+    color: #5C5C5C;
+    cursor: pointer;
+}
+
+.listMenuItemProjects:hover, .listMenuItemUsers:hover {
     background: grey;
 }
 
-.listMenuItem:is-active {
-    background: black;
+.listMenuItemUsers.active, .listMenuItemProjects.active {
+    background: #d3d3d3;
+    font-weight: bold;
 }
 
 .task {
@@ -127,3 +151,13 @@
 .circleAddButton:hover {
     opacity: 0.7;
 }
+
+.searchBar {
+    margin-bottom: 10px;
+    padding: 8px;
+    background: #E1E3E6;
+    border: 2px solid #595856;
+    border-radius: 4px;
+    width: 100%;
+    box-sizing: border-box;
+}   
