Fix user registration bug, implement delete functions, and resolve duplicate post request issue
- Fix bug in user registration by including environment variable configuration in the auth controller:
  - require('dotenv').config();
  - const jwtSecret = process.env.JWT_SECRET;

- Implement delete functions for user, task, and project controller

- Include pre-hooks in user, project, and task models to handle cascading deletions:

- Fix bug where both AdminDash and CreateProject components were sending duplicate post requests:
- Moved the full post request logic to the CreateProject component to avoid redundancy and ensure single request handling.

--- a/src/components/Dashboard/Dashboard.module.css
+++ b/src/components/Dashboard/Dashboard.module.css
@@ -49,6 +49,7 @@
     flex-direction: column;
     flex-grow: 1;
     padding: 40px;
+    color: white;
 }
 
 .titleHasTextPrimary{
@@ -62,6 +63,7 @@
     margin-top: 15px;
     flex-direction: column;
     flex-grow: 1;
+    color: white;
 }
 
 .listMenuItem {
@@ -71,6 +73,7 @@
     width: 100%;
     margin-bottom: 5px;
     padding: 5px;
+    color: white;
 }
 
 .listMenuItem:hover {
@@ -79,6 +82,7 @@
 
 .listMenuItem:is-active {
     background: black;
+    
 }
 
 .task {
@@ -86,4 +90,5 @@
     padding: 15px 20px;
     border-radius: 5px;
     margin-top: 10px;
+    color: white;
 }
