--- a/src/components/AdminDashboard/AdminDashboard.module.css
+++ b/src/components/AdminDashboard/AdminDashboard.module.css
@@ -34,6 +34,7 @@
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
     background: rgba(0, 0, 0, 0.3);
+    overflow-y: auto;
 }
 
 .usersContainer {
