feat: Implemented Task and User Management Features
- Added `getTaskById` and `updateTask` functions in `taskController`
  - `getTaskById`: Retrieves task details by ID.
  - `updateTask`: Updates task details by ID and returns the updated task.

- Added `removeUserFromProject` function in `userController`
  - Removes a user from a project and deletes related task assignments.

- Updated `taskRoutes`

- Updated `userRoutes`

- Enhanced Admin Dashboard
  - Implemented `handleRemoveUserFromProject` function to handle user removal from project on frontend.

- Created `EditTaskForm` component
  - Allows editing task details.
  - Fetches task details and available users on component mount.
  - Handles task update and assignment to a user on form submission.

- Integrated API
  - `getTaskById`, `updateTask`, `assignTaskToUser`, and `getUsersByProject` API calls integrated.

pending: Implement 'removeTaskAssignment' on task update.

--- a/src/components/Task/EditTaskForm.module.css
+++ b/src/components/Task/EditTaskForm.module.css
@@ -17,7 +17,7 @@
     border: 1px outset;
     border-radius: 5px;
     width: 450px;
-    height: 540px;
+    height: 620px;
     color: #e1e3e6;
     font-family: 'cambria';
     font-size: 20px;
@@ -51,7 +51,7 @@
     border-radius: 5px;
 }
 
-.buttonCreate, .buttonCancel {
+.buttonEdit, .buttonCancel {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -64,6 +64,6 @@
     font-weight: 500;
 }
 
-.buttonCreate:hover, .buttonCancel:hover {
+.buttonEdit:hover, .buttonCancel:hover {
     opacity: 0.7;
 }
