--- a/src/components/Task/TaskTable.module.css
+++ b/src/components/Task/TaskTable.module.css
@@ -19,6 +19,32 @@
     color: #2b2b2a;
     font-weight: 550;
   }
+
+  .editButton {
+    height: 22px;
+    width: 40px;
+    padding: 0px;
+    border-radius: 5px;
+    color: #E1E3E6;
+    font-size: 0.9em;
+    font-weight: 600;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    vertical-align: middle;
+    font-family: 'Times-Roman';
+    cursor: pointer;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+    border: none;
+    background: linear-gradient(to bottom, #0d3d64, #04203b);
+    transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.editButton:hover {
+    transform: translateY(-2px);
+    box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.3);
+    background: linear-gradient(to bottom, #285377, #103555);
+}
   
   .table tr:nth-child(even) {
 
