feat: Add admin authentication and restructure routes
- Added admin routes in server.js
- Created admin authentication middleware (adminAuthMiddleware)
- Created user authentication middleware (authMiddleware)
- Restructured routes into public/user and admin routes

- Implemented protected routes in the front end
  - Created ProtectedRoute component
  - Decodes JWT token and checks user role
  - Allows access to admin routes for admin users
  - Redirects to login if no token is found or token is invalid

- Implemented table for task view on dashboard component
- Updated routes.js to use ProtectedRoute component
- Adjusted API calls to reflect route restructuring

- Next steps:
  - Improve reusability and tackle redundancy by implementing hooks and utils folders in the front end

--- a/src/components/Dashboard/Dashboard.module.css
+++ b/src/components/Dashboard/Dashboard.module.css
@@ -50,7 +50,7 @@
     flex-direction: column;
     flex-grow: 1;
     padding: 40px;
-    color: white;
+    color: #E1E3E6;
 }
 
 .titleHasTextPrimary{
@@ -64,7 +64,7 @@
     margin-top: 15px;
     flex-direction: column;
     flex-grow: 1;
-    color: white;
+    color: #E1E3E6;
 }
 
 .listMenuItem {
@@ -74,7 +74,7 @@
     width: 100%;
     margin-bottom: 5px;
     padding: 5px;
-    color: white;
+    color: #E1E3E6;
 }
 
 .listMenuItem:hover {
@@ -86,11 +86,33 @@
     
 }
 
-.task {
-    background: black;
-    padding: 15px 20px;
-    border-radius: 5px;
-    margin-top: 10px;
-    color: white;
+.taskTable {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
 }
 
+.taskTable th, .taskTable td {
+    padding: 8px;
+}
+
+.taskTable th {
+    color: #36454F;
+    text-align: left;
+}
+
+.taskRow:hover {    
+    background-color: #575757;
+    cursor: pointer;
+}
+
+.taskDescriptionRow {
+    
+    background-color: #1a1a1a;
+    color: #E1E3E6;
+}
+
+.taskDescriptionRow td {
+    padding: 10px;
+    border-bottom-left-radius: 8px;
+}
